fix search bar vertical align

--- a/client/src/components/search/searchBar/searchbar.css
+++ b/client/src/components/search/searchBar/searchbar.css
@@ -20,6 +20,7 @@
   display: inline-block;
   margin-top: 6px;
   height: 26px;
+  line-height: 27px;
 }
 
 .ais-SearchBox-submit {
